log
ju.,  2 de oct. de 2025 19:49:35: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
